use bootstrap in h1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="ham">
         <img id="hambi" src="./img/hamburger.svg" />
       </div>
-      <h1>MEDIA APPEARANCES</h1>
+      <p class="h1">MEDIA APPEARANCES</p>
       <div id="main">
         <div class="box">
           <div class="innerbox dark">
